--- a/style.css
+++ b/style.css
@@ -10722,7 +10722,10 @@ padding:7px 0px;
 .site-bg-primary .header-nav .nav>li:hover>a,
 .site-bg-primary .header-nav .nav>li.active>a,
 .site-bg-primary .header-nav .nav>li.current-menu-item>a {
-	color: #1a1a1a;
+	color: #fff;
+    text-decoration: underline;
+    padding-bottom:2px
+
 }
 
 
