--- a/style.css
+++ b/style.css
@@ -7771,14 +7771,13 @@ input[type=radio]:checked+label:before {
 	font-style: normal;
 }
 
-
-/* .widget .post-title {
+.post-title {
 	font-size: 14px;
 	margin-bottom: 0px;
 	margin-top: 0px;
 	font-weight: normal;
 	font-family: 'Roboto', sans-serif;
-} */
+}
 
 
 .recent-posts-entry .widget-post {
