--- a/style.css
+++ b/style.css
@@ -7772,11 +7772,13 @@ input[type=radio]:checked+label:before {
 }
 
 .post-title {
-	font-size: 14px;
-	margin-bottom: 0px;
-	margin-top: 0px;
-	font-weight: normal;
-	font-family: 'Roboto', sans-serif;
+	font-size: 18px;
+    margin-bottom: 0px;
+    margin-top: 0px;
+    font-weight: normal;
+    font-family: 'Roboto', sans-serif;
+    font-weight: bold;
+
 }
 
 
